Logger naming independent loggers.

--- a/src/main/resources/log.properties
+++ b/src/main/resources/log.properties
@@ -3,3 +3,6 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 com.pluralsight.handlers=java.util.logging.ConsoleHandler
 com.pluralsight.level=ALL
 java.util.logging.SimpleFormatter.format=%5$s,%2$s,%4$s%n
+
+com.ps.training.handlers=java.util.logging.ConsoleHandler
+com.ps.training.level=INFO
