--- a/src/main/resources/log.properties
+++ b/src/main/resources/log.properties
@@ -6,3 +6,8 @@ java.util.logging.SimpleFormatter.format=%5$s,%2$s,%4$s%n
 
 com.ps.training.handlers=java.util.logging.ConsoleHandler
 com.ps.training.level=INFO
+
+java.util.logging.FileHandler.level=ALL
+java.util.logging.FileHandler.pattern=./main_%g.log
+com.ps.training.LoggerNaming.handlers=java.util.logging.FileHandler
+com.ps.training.LoggerNaming.level=ALL
